Fix for overflow feature image on mobile

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -141,6 +141,7 @@ nav {
   grid-column: 1 / span 2;
   height: 100%;
   object-fit: cover;
+  width: 100%;
 }
 #mobile-image {
   display: none;
